# meta-benchmark

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml  run_benchmark.py
.github/workflows/: ci.yml  score-submission.yml
harnesses/mini-git/: rubric.md
harnesses/mini-git/tests/: conftest.py
harnesses/mini-redis/: prompt.md  rubric.md  spec.md
leaderboard/: README.md  index.html  submissions.html
leaderboard/data/: runs.json
runner/: cli.py  environment.py  requirements.txt  submission.py
runner/agents/: README.md  __init__.py  anthropic_api.py  claude_code.py  manual.py  openai_api.py
scorer/: adversarial.py  behavioral.py  extension.py  judge.py  mutation.py  performance.py  reliability.py  scorecard.py
submissions/mini-git-claude-opus-4-6-20260311T110513Z/: metadata.json  scorecard.json
submissions/mini-git-claude-opus-4-6-live/: metadata.json  scorecard.json
submissions/mini-git-gemini-2-5-pro-20260311T111218Z/: metadata.json  scorecard.json
submissions/mini-git-gpt-5-3-codex-20260311T112303Z/: metadata.json  scorecard.json
submissions/mini-git-gpt-5-4-20260311T111728Z/: metadata.json  scorecard.json
submissions/mini-redis-claude-opus-4-6-20260311T225723Z/: metadata.json  scorecard.json
submissions/mini-redis-gemini-2.5-pro-20260311T230915Z/: metadata.json  scorecard.json
submissions/mini-redis-gpt-5.4-20260311T231854Z/: metadata.json  scorecard.json
submissions/mini-sqlite-claude-opus-4-6-20260311T232737Z/: metadata.json  scorecard.json
submissions/mini-sqlite-gemini-2.5-pro-20260311T232738Z/: metadata.json  scorecard.json
(+67 files in other folders)
